# enigma

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml  release-cli.yml
benchmarks/: bench.py  bench_encrypt_only.py
benchmarks/results/: encrypt_results.md  hash_results.md
bytes-encryption/: index.html
cli/: .gitignore  CMakeLists.txt  index.html
cli-reference/: index.html
cli/src/: main.cpp
core/: .gitignore  CMakeLists.txt
core/include/enigma/: cipher.h  hash.h  primitives.h
core/src/: cipher.cpp  file_io.cpp  hash.cpp  primitives.cpp  salt.cpp  salt.h
dev/: index.html
dev/algorithms/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
docs/: bytes-encryption.md  cli-reference.md  cli.md  file-encryption.md  hashing.md  index.md  installation.md  performance.md  python-reference.md  python.md  security.md  try.md
docs/dev/: algorithms.md  architecture.md  benchmarks.md  build.md  index.md
docs/try/: fs.md
file-encryption/: index.html
hashing/: index.html
installation/: index.html
performance/: index.html
python/: .gitignore  CMakeLists.txt  bindings.cpp  index.html
python-reference/: index.html
python/enigma/: __init__.py  __init__.pyi
search/: search_index.json
security/: index.html
stylesheets/: extra.css
tests/cpp/: .gitignore  CMakeLists.txt  test_cipher.cpp  test_hash.cpp
tests/python/: .gitignore  cross_check.py  test_algo_parity.py  test_cipher.py  test_hash.py
try/: index.html
try/fs/: index.html
