[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "enigma-encryption"
version = "1.0.0"
description = "Custom password hashing and file encryption — C++ core, Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["encryption", "hashing", "cipher", "password", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/dsainvg/enigma"
Repository = "https://github.com/dsainvg/enigma"
Issues = "https://github.com/dsainvg/enigma/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DENIGMA_BUILD_CLI=OFF",
    "-DENIGMA_BUILD_PYTHON=ON",
    "-DENIGMA_BUILD_TESTS=OFF",
]
wheel.packages = ["python/enigma"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
